--- a/.github/workflows/tfc-sync.yml
+++ b/.github/workflows/tfc-sync.yml
@@ -13,6 +13,9 @@ permissions:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: infra
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
